Fix generic bounds to build with Java 11
Signed-off-by: Daniel Lacasse <daniel@nokee.dev>